force-app/main/default/objects/BMCServiceDesk__ScanConfiguration__c/BMCServiceDesk__ScanConfiguration__c.object-meta.xml
<CustomObject>
    <label>Scan Configuration</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>