force-app/main/default/objects/BMCServiceDesk__ScanConfiguration__c/fields/BMCServiceDesk__ScanConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ScanConfigurationId__c</fullName>
    <label>Scan Configuration Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>