force-app/main/default/objects/BMCServiceDesk__ScanConfiguration__c/fields/BMCServiceDesk__ScanConfigurationName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ScanConfigurationName__c</fullName>
    <description>To store the name of the Scan Configuration.</description>
    <label>Scan Configuration Name</label>
    <type>TextArea</type>
</CustomField>